[gd_scene load_steps=12 format=3 uid="uid://bgf743xmdymnl"]

[ext_resource type="Script" path="res://Characters/StateMachineFox.gd" id="1_4lnp5"]
[ext_resource type="Script" path="res://Characters/Fox.gd" id="1_57j6t"]
[ext_resource type="PackedScene" uid="uid://jgc220alke2" path="res://Hitbox/hitbox.tscn" id="2_owa2i"]
[ext_resource type="SpriteFrames" uid="uid://du0eu2at4mujt" path="res://Characters/FoxSprites.tres" id="4_mos2y"]
[ext_resource type="AnimationLibrary" uid="uid://c6hatnl8hwifl" path="res://Characters/FoxAnimationPlayer.res" id="5_ayo06"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh8i7"]
size = Vector2(60, 94)

[sub_resource type="SystemFont" id="SystemFont_bg6cx"]
font_names = PackedStringArray("Fantasy")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_axkb7"]
base_font = SubResource("SystemFont_bg6cx")

[sub_resource type="SystemFont" id="SystemFont_d4gkc"]
font_names = PackedStringArray("Fantasy")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_k0jbb"]
base_font = SubResource("SystemFont_d4gkc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hfqq"]
size = Vector2(67, 34)

[node name="FOX" type="CharacterBody2D" node_paths=PackedStringArray("GroundL", "GroundR", "Ledge_Grab_F", "Ledge_Grab_B", "anim")]
collision_mask = 6
platform_on_leave = 2
platform_floor_layers = 6
script = ExtResource("1_57j6t")
hitbox = ExtResource("2_owa2i")
GroundL = NodePath("Raycasts/GroundL")
GroundR = NodePath("Raycasts/GroundR")
Ledge_Grab_F = NodePath("Raycasts/Ledge_Grab_F")
Ledge_Grab_B = NodePath("Raycasts/Ledge_Grab_B")
anim = NodePath("Sprite/AnimationPlayer")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_4lnp5")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("4_mos2y")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": ExtResource("5_ayo06")
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_sh8i7")

[node name="Raycasts" type="Node2D" parent="."]

[node name="GroundL" type="RayCast2D" parent="Raycasts"]
position = Vector2(-29, 35)
target_position = Vector2(0, 13)
collision_mask = 6
hit_from_inside = true

[node name="GroundR" type="RayCast2D" parent="Raycasts"]
position = Vector2(29, 35)
target_position = Vector2(0, 13)
collision_mask = 6
hit_from_inside = true

[node name="Ledge_Grab_F" type="RayCast2D" parent="Raycasts"]
position = Vector2(22, -15)
scale = Vector2(3, 3)
target_position = Vector2(20, 0)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="Ledge_Grab_B" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, -38)
scale = Vector2(3, 3)
target_position = Vector2(-11, 0)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="Frames" type="Label" parent="."]
offset_left = -20.0
offset_top = -100.0
offset_right = 20.0
offset_bottom = -77.0
theme_override_colors/font_outline_color = Color(0.643137, 0.192157, 0.176471, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("FontVariation_axkb7")
text = "45"
horizontal_alignment = 1

[node name="States" type="Label" parent="."]
offset_left = -20.0
offset_top = -73.0
offset_right = 20.0
offset_bottom = -50.0
theme_override_colors/font_outline_color = Color(0.643137, 0.192157, 0.176471, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("FontVariation_k0jbb")
text = "State"
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
offset_left = 38.0
offset_top = -72.0
offset_right = 86.0
offset_bottom = -47.0
theme_override_colors/font_outline_color = Color(0.643137, 0.192157, 0.176471, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("FontVariation_k0jbb")
text = "Health"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(63.5, 31)
shape = SubResource("RectangleShape2D_5hfqq")

[node name="gun_pos" type="Marker2D" parent="."]
position = Vector2(56, 0)
